prod/message/RCmaster.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: message-master-deployment
  namespace: prod
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: message-master
    spec:
      containers:
      - name: message
        image: rocketchat/rocket.chat:0.70.4
        ports:
        - containerPort: 8005
        readinessProbe:
          httpGet:
            path: /api/v1/info
            port: 8005
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 4
          failureThreshold: 3
        # due to sticky sessions this has to be very generous, a restart in one pod that's just slow can cause more problems than it solves
        livenessProbe:  
          httpGet:
            path: /api/v1/info
            port: 8005
          initialDelaySeconds: 360
          periodSeconds: 12
          timeoutSeconds: 12
          failureThreshold: 12
        resources:
          requests:
            memory: "2048Mi"
            cpu: "1.75"
          limits:
            memory: "2048Mi"
            cpu: "1.9"
        volumeMounts:
        - mountPath: /app/uploads
          name: message-data-volume
      volumes:
      - name: message-data-volume
        persistentVolumeClaim:
          claimName: message-data-volume-claim
