prod/message/prometheus-export.yaml
# for prometheus metrics scraping
apiVersion: v1
kind: Service
metadata:
  name: messagepromy
  namespace: prod
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 9458
  selector: 
    app: message
