prod/message/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message
  namespace: prod
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8005
  sessionAffinity: ClientIP
  selector: 
    app: message
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: message-deployment
  namespace: prod
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: message
    spec:
      containers:
      - name: message
        image: rocketchat/rocket.chat:0.65.0
        ports:
        - containerPort: 8005
        readinessProbe:
          httpGet:
            path: /
            port: 8005
          initialDelaySeconds: 10
          periodSeconds: 6
          timeoutSeconds: 5
          failureThreshold: 12
        livenessProbe:
          httpGet:
            path: /
            port: 8005
          initialDelaySeconds: 60
          periodSeconds: 7
          timeoutSeconds: 10
          failureThreshold: 12
        resources:
          requests:
            memory: "900Mi"
            cpu: "1"
          limits:
            memory: "1.5Gi"
            cpu: "1.2"
        volumeMounts:
        - mountPath: /app/uploads
          name: message-data-volume
      volumes:
      - name: message-data-volume
        persistentVolumeClaim:
          claimName: message-data-volume-claim
