prod/message/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: message-ingress
  namespace: prod
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: |
      set $redirect_to_https 0;
spec:
  tls:
  - hosts:
    - message.gccollab.ca
    secretName: message-secret
  rules:
  - host: message.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: message
          servicePort: 8005
